[package]
name = "harmony"
version = "0.1.0"
edition = "2021"
authors = []
description = "A procedural map generation library with a focus on hex-based maps"
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
image = "0.24"
colors-transform = "0.2.11"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "map_generator"
path = "src/bin/map_generator.rs"
