[package]
name = "harmony"
version = "0.1.0"
edition = "2021"
authors = []
description = "A procedural map generation library with a focus on hex-based maps"
license = "MIT"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_mod_picking = "0.17"  # For hex selection
bevy_prototype_debug_lines = "0.12"  # For grid debugging
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.4", features = ["v4"] }
image = "0.24"
colors-transform = "0.2.11"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "map_generator"
path = "src/bin/map_generator.rs"
